compiler/testData/diagnostics/tests/typealias/topLevelTypeAliasesOnly.diag.txt
/topLevelTypeAliasesOnly.kt:8:5: error: nested and local type aliases are not supported
    typealias Nested = Any
    ^^^^^^^^^^^^^^^^^^^^^^
/topLevelTypeAliasesOnly.kt:12:5: error: nested and local type aliases are not supported
    typealias Nested = Any
    ^^^^^^^^^^^^^^^^^^^^^^
/topLevelTypeAliasesOnly.kt:14:9: error: nested and local type aliases are not supported
        typealias Nested = Any
        ^^^^^^^^^^^^^^^^^^^^^^
/topLevelTypeAliasesOnly.kt:16:13: error: nested and local type aliases are not supported
            typealias LocalInMember = Any
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/topLevelTypeAliasesOnly.kt:22:5: error: nested and local type aliases are not supported
    typealias Local = Any
    ^^^^^^^^^^^^^^^^^^^^^

